parser/tests/bad/ref06.st
% subscript must have type 'int'

var arr: array 1..2 of int
const i := arr[1.0]
